3교시, 기본문법 리스트 슬라이싱

--- a/pythonProject3/240717_test1/test1.ipynb
+++ b/pythonProject3/240717_test1/test1.ipynb
@@ -199,12 +199,193 @@
    "execution_count": 7
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T02:24:38.215809Z",
+     "start_time": "2024-07-17T02:24:38.213029Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "todayMenuList = [\"0돈까스-8\",\"1모밀-7\",\"2도시락-6\",\"3참깨라면-5\",\"4제육볶음-4\",\"5국수-3\",\"6된장찌개-2\",\"7국밥-1\"]",
+   "id": "5e5984c7ba1d89c8",
+   "outputs": [],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T02:24:40.723746Z",
+     "start_time": "2024-07-17T02:24:40.719750Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(todayMenuList[:])",
+   "id": "df5acf84df96a8e2",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0돈까스-8', '1모밀-7', '2도시락-6', '3참깨라면-5', '4제육볶음-4', '5국수-3', '6된장찌개-2', '7국밥-1']\n"
+     ]
+    }
+   ],
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T02:24:42.787114Z",
+     "start_time": "2024-07-17T02:24:42.782893Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(todayMenuList[0:2])",
+   "id": "1b04d495ac72c30f",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0돈까스-8', '1모밀-7']\n"
+     ]
+    }
+   ],
+   "execution_count": 10
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T02:24:44.540205Z",
+     "start_time": "2024-07-17T02:24:44.536888Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(todayMenuList[6:-1])",
+   "id": "9d271db84e60c201",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['6된장찌개-2']\n"
+     ]
+    }
+   ],
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T02:25:52.983822Z",
+     "start_time": "2024-07-17T02:25:52.979779Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(todayMenuList[4:])\n",
+   "id": "4b66bd986ec99af9",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['4제육볶음-4', '5국수-3', '6된장찌개-2', '7국밥-1']\n"
+     ]
+    }
+   ],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T02:26:11.884407Z",
+     "start_time": "2024-07-17T02:26:11.881337Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(todayMenuList[:4])",
+   "id": "a9d908e7f85b85a7",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0돈까스-8', '1모밀-7', '2도시락-6', '3참깨라면-5']\n"
+     ]
+    }
+   ],
+   "execution_count": 13
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T02:28:51.330846Z",
+     "start_time": "2024-07-17T02:28:51.326541Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(todayMenuList[1:8:2])",
+   "id": "fea0d4fd2140f7f6",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1모밀-7', '3참깨라면-5', '5국수-3', '7국밥-1']\n"
+     ]
+    }
+   ],
+   "execution_count": 14
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T02:29:10.430403Z",
+     "start_time": "2024-07-17T02:29:10.425053Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(todayMenuList[0:8:2])",
+   "id": "1333bef8eea24440",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0돈까스-8', '2도시락-6', '4제육볶음-4', '6된장찌개-2']\n"
+     ]
+    }
+   ],
+   "execution_count": 15
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T02:29:56.748514Z",
+     "start_time": "2024-07-17T02:29:56.745513Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(todayMenuList[::-1])",
+   "id": "2c4cd4bba3b171d5",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['7국밥-1', '6된장찌개-2', '5국수-3', '4제육볶음-4', '3참깨라면-5', '2도시락-6', '1모밀-7', '0돈까스-8']\n"
+     ]
+    }
+   ],
+   "execution_count": 16
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "5e5984c7ba1d89c8"
+   "id": "d876d18e58927691"
   }
  ],
  "metadata": {
