--- a/pythonProject3/240717_test1/test1.ipynb
+++ b/pythonProject3/240717_test1/test1.ipynb
@@ -380,12 +380,279 @@
    "execution_count": 16
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T02:35:50.556105Z",
+     "start_time": "2024-07-17T02:35:50.553111Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "menuResultIn = \"3참깨라면-5\" in todayMenuList\n",
+    "print(menuResultIn)"
+   ],
+   "id": "d876d18e58927691",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "execution_count": 19
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T02:37:25.994561Z",
+     "start_time": "2024-07-17T02:37:25.992132Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "todayMenuList.append(\"8라면\")\n",
+    "print(todayMenuList)"
+   ],
+   "id": "2fbedd6fb37df5f8",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0돈까스-8', '1모밀-7', '2도시락-6', '3참깨라면-5', '4제육볶음-4', '5국수-3', '6된장찌개-2', '7국밥-1', '8라면']\n"
+     ]
+    }
+   ],
+   "execution_count": 20
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T02:38:48.012647Z",
+     "start_time": "2024-07-17T02:38:48.006661Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "tomorrowMenuList = [\"치킨\",\"서브웨이\",\"빵\"]\n",
+    "todayMenuList.extend(tomorrowMenuList)\n",
+    "print(todayMenuList)\n"
+   ],
+   "id": "327e440daa1aa8da",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0돈까스-8', '1모밀-7', '2도시락-6', '3참깨라면-5', '4제육볶음-4', '5국수-3', '6된장찌개-2', '7국밥-1', '8라면', '치킨', '서브웨이', '빵']\n"
+     ]
+    }
+   ],
+   "execution_count": 21
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T02:40:31.413162Z",
+     "start_time": "2024-07-17T02:40:31.408642Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "addMenuList = [\"초밥\",\"스테이크\",\"피자\"]\n",
+    "todayMenuList.insert(1,addMenuList)\n",
+    "print(todayMenuList)"
+   ],
+   "id": "700445281af1392",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0돈까스-8', ['초밥', '스테이크', '피자'], '1모밀-7', '2도시락-6', '3참깨라면-5', '4제육볶음-4', '5국수-3', '6된장찌개-2', '7국밥-1', '8라면', '치킨', '서브웨이', '빵']\n"
+     ]
+    }
+   ],
+   "execution_count": 22
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T02:41:26.214977Z",
+     "start_time": "2024-07-17T02:41:26.211988Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(todayMenuList[1][2])",
+   "id": "e687023b4d4ad2e",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "피자\n"
+     ]
+    }
+   ],
+   "execution_count": 23
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T02:41:52.499215Z",
+     "start_time": "2024-07-17T02:41:52.495273Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(todayMenuList[1][:])",
+   "id": "c6b4ce8c98332909",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['초밥', '스테이크', '피자']\n"
+     ]
+    }
+   ],
+   "execution_count": 24
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T02:42:02.474440Z",
+     "start_time": "2024-07-17T02:42:02.470811Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(todayMenuList[1][::-1])",
+   "id": "5a8ce89287fed382",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['피자', '스테이크', '초밥']\n"
+     ]
+    }
+   ],
+   "execution_count": 25
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T02:44:01.654233Z",
+     "start_time": "2024-07-17T02:44:01.650605Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "todayMenuList.remove('치킨')\n",
+    "print(todayMenuList)"
+   ],
+   "id": "92d269395a48bfa8",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0돈까스-8', ['초밥', '스테이크', '피자'], '1모밀-7', '2도시락-6', '3참깨라면-5', '4제육볶음-4', '5국수-3', '6된장찌개-2', '7국밥-1', '8라면', '서브웨이', '빵']\n"
+     ]
+    }
+   ],
+   "execution_count": 27
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T02:46:01.390423Z",
+     "start_time": "2024-07-17T02:46:01.388172Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "todayMenuList.append('치킨3')",
+   "id": "f26592358f83b8f8",
+   "outputs": [],
+   "execution_count": 33
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T02:46:03.165650Z",
+     "start_time": "2024-07-17T02:46:03.161175Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(todayMenuList)",
+   "id": "9934c2627e3b89fa",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0돈까스-8', ['초밥', '스테이크', '피자'], '1모밀-7', '2도시락-6', '3참깨라면-5', '4제육볶음-4', '5국수-3', '6된장찌개-2', '7국밥-1', '8라면', '서브웨이', '빵', '치킨', '치킨', '치킨', '치킨2', '치킨3']\n"
+     ]
+    }
+   ],
+   "execution_count": 34
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T02:46:39.229204Z",
+     "start_time": "2024-07-17T02:46:39.224825Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "todayMenuList.remove('치킨')\n",
+    "print(todayMenuList)"
+   ],
+   "id": "5eb5750d4f108b50",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0돈까스-8', ['초밥', '스테이크', '피자'], '1모밀-7', '2도시락-6', '3참깨라면-5', '4제육볶음-4', '5국수-3', '6된장찌개-2', '7국밥-1', '8라면', '서브웨이', '빵', '치킨2', '치킨3']\n"
+     ]
+    }
+   ],
+   "execution_count": 37
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T02:47:39.299287Z",
+     "start_time": "2024-07-17T02:47:39.296346Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "todayMenuList.remove(todayMenuList[-2])\n",
+    "print(todayMenuList)"
+   ],
+   "id": "14c5bf17967c72c5",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0돈까스-8', ['초밥', '스테이크', '피자'], '1모밀-7', '2도시락-6', '3참깨라면-5', '4제육볶음-4', '5국수-3', '6된장찌개-2', '7국밥-1', '8라면', '서브웨이', '빵', '치킨3']\n"
+     ]
+    }
+   ],
+   "execution_count": 38
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "d876d18e58927691"
+   "id": "5324cfec9eb119e2"
   }
  ],
  "metadata": {
