--- a/pythonProject3/240717_test1/ch2/test1.ipynb
+++ b/pythonProject3/240717_test1/ch2/test1.ipynb
@@ -647,12 +647,116 @@
    "execution_count": 38
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T03:04:40.651255Z",
+     "start_time": "2024-07-17T03:04:40.647260Z"
+    }
+   },
    "cell_type": "code",
+   "source": "todayMenuList[-3] = \"면\"",
+   "id": "5324cfec9eb119e2",
    "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "5324cfec9eb119e2"
+   "execution_count": 39
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T03:05:00.738570Z",
+     "start_time": "2024-07-17T03:05:00.735626Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(todayMenuList)",
+   "id": "2454d90e59aab43c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0돈까스-8', ['초밥', '스테이크', '피자'], '1모밀-7', '2도시락-6', '3참깨라면-5', '4제육볶음-4', '5국수-3', '6된장찌개-2', '7국밥-1', '8라면', '면', '빵', '치킨3']\n"
+     ]
+    }
+   ],
+   "execution_count": 40
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T03:05:20.807474Z",
+     "start_time": "2024-07-17T03:05:20.804460Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "del todayMenuList[-3]\n",
+    "print(todayMenuList)"
+   ],
+   "id": "c7168d81115eefd8",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0돈까스-8', ['초밥', '스테이크', '피자'], '1모밀-7', '2도시락-6', '3참깨라면-5', '4제육볶음-4', '5국수-3', '6된장찌개-2', '7국밥-1', '8라면', '빵', '치킨3']\n"
+     ]
+    }
+   ],
+   "execution_count": 41
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T05:19:46.229049Z",
+     "start_time": "2024-07-17T05:19:46.214575Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "for i in range (10,1,-1):\n",
+    "    print(i)"
+   ],
+   "id": "95705f6b8d192c56",
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'for' statement on line 1 (2928706056.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;36m  Cell \u001B[1;32mIn[43], line 2\u001B[1;36m\u001B[0m\n\u001B[1;33m    print(i)\u001B[0m\n\u001B[1;37m    ^\u001B[0m\n\u001B[1;31mIndentationError\u001B[0m\u001B[1;31m:\u001B[0m expected an indented block after 'for' statement on line 1\n"
+     ]
+    }
+   ],
+   "execution_count": 43
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T06:00:53.170745Z",
+     "start_time": "2024-07-17T06:00:16.247340Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "decimal = 10\n",
+    "result = ''\n",
+    "while(decimal > 0):\n",
+    "    remainder = decimal % 2\n",
+    "    decimal = decimal // 2\n",
+    "    result = str(remainder) + result\n",
+    "print(result)"
+   ],
+   "id": "94a275f2e173d25c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1010\n"
+     ]
+    }
+   ],
+   "execution_count": 46
   }
  ],
  "metadata": {
