7교시, 3장 가변인수, 키워드 가변인수

--- a/pythonProject3/240717_test1/ch3_function/test1.ipynb
+++ b/pythonProject3/240717_test1/ch3_function/test1.ipynb
@@ -41,12 +41,162 @@
    "execution_count": 3
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T07:06:03.160937Z",
+     "start_time": "2024-07-17T07:06:03.154953Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def f():\n",
+    "    global s\n",
+    "    s = \"I love Busan\"\n",
+    "    print(s)\n",
+    "s = \"I love 국밥\"\n",
+    "f()\n",
+    "print(s)"
+   ],
+   "id": "949117a40a0c8f77",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I love Busan\n",
+      "I love Busan\n"
+     ]
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T07:25:55.002633Z",
+     "start_time": "2024-07-17T07:25:54.993842Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# def sum(a,b,*args):\n",
+    "#     return print(args)\n",
+    "# \n",
+    "# print(sum(1,2,3,4))"
+   ],
+   "id": "229ad00d642fd980",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 4)\n",
+      "None\n"
+     ]
+    }
+   ],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T07:32:10.405368Z",
+     "start_time": "2024-07-17T07:32:10.401372Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def sum2(a,b,*args):\n",
+    "    return a + b + sum(args)\n",
+    "print(f\"sum2(1,2,3,4,5)의 결과 : {sum2(1,2,3,4,5)}\")"
+   ],
+   "id": "d1f8eed0f16f368a",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sum2(1,2,3,4,5)의 결과 : 15\n"
+     ]
+    }
+   ],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T07:35:25.922433Z",
+     "start_time": "2024-07-17T07:35:25.915161Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def testKargs(**args):\n",
+    "    print(args)\n",
+    "    print(f\"키 값에 해당하는 value 값 조회 : {args[\"a\"]}\")\n",
+    "    print(f\"키 값에 해당하는 value 값 조회 : {args[\"b\"]}\")\n",
+    "    print(f\"키 값에 해당하는 value 값 조회 : {args[\"c\"]}\")\n",
+    "    \n",
+    "testKargs(a = 1, b = 2, c = 3)"
+   ],
+   "id": "45c441133c402fb0",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1, 'b': 2, 'c': 3}\n",
+      "키 값에 해당하는 value 값 조회 : 1\n",
+      "키 값에 해당하는 value 값 조회 : 2\n",
+      "키 값에 해당하는 value 값 조회 : 3\n"
+     ]
+    }
+   ],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-17T07:38:55.381793Z",
+     "start_time": "2024-07-17T07:38:55.377208Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def A(*args) :\n",
+    "    x,y , *z = args\n",
+    "    print(f\"z의 타입 : {type(z)}\")\n",
+    "    return x,y,z\n",
+    "\n",
+    "print(f\"A(1,2) 의 결과 : {A(1,2)}\")\n",
+    "print(f\"A(1,2,3) 의 결과 : {A(1,2,3)}\")\n",
+    "print(f\"A(1,2,3,4,5) 의 결과 : {A(1,2,3,4,5)}\")\n",
+    "\n"
+   ],
+   "id": "987a68c191d7b739",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "z의 타입 : <class 'list'>\n",
+      "A(1,2) 의 결과 : (1, 2, [])\n",
+      "z의 타입 : <class 'list'>\n",
+      "A(1,2,3) 의 결과 : (1, 2, [3])\n",
+      "z의 타입 : <class 'list'>\n",
+      "A(1,2,3,4,5) 의 결과 : (1, 2, [3, 4, 5])\n"
+     ]
+    }
+   ],
+   "execution_count": 4
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "949117a40a0c8f77"
+   "id": "d42fdbc6c1936ab2"
   }
  ],
  "metadata": {
