2교시, 3장 문자열 내장함수 확인2

--- a/pythonProject3/ch3_function/240718_test1/test2.ipynb
+++ b/pythonProject3/ch3_function/240718_test1/test2.ipynb
@@ -366,7 +366,15 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [
+    "# yesterday 가사 파일 읽어서 , 메모리상에서 작업 해보기,\n",
+    "f = open(\"yesterday.txt\",\"r\")\n",
+    "# 메모리상에 파일을 읽은 f 객체를 메서드 이용해서, 문장 추출. \n",
+    "yesterday_lyric = f.readlines()\n",
+    "# 읽는 도구는 사용후 메모리 반납.\n",
+    "f.close()\n",
+    "print(yesterday_lyric)"
+   ],
    "id": "8abd6660916a81fc"
   }
  ],
