3교시, 4장 자료구조 순서있는 딕션너리 기본

--- a/pythonProject3/ch4_data_structure/test1.ipynb
+++ b/pythonProject3/ch4_data_structure/test1.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-07-18T02:27:04.165856Z",
-     "start_time": "2024-07-18T02:27:04.159728Z"
+     "end_time": "2024-07-18T02:43:06.201961Z",
+     "start_time": "2024-07-18T02:43:06.199311Z"
     }
    },
    "source": [
@@ -23,13 +23,13 @@
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-18T02:27:55.214227Z",
-     "start_time": "2024-07-18T02:27:55.210102Z"
+     "end_time": "2024-07-18T02:43:06.214289Z",
+     "start_time": "2024-07-18T02:43:06.204951Z"
     }
    },
    "cell_type": "code",
@@ -49,15 +49,131 @@
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 14
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-18T02:43:06.220021Z",
+     "start_time": "2024-07-18T02:43:06.215283Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "'도시락' in today_lunch_menu.values()",
+   "id": "60eb4c1f44f84d09",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 15
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-18T02:43:06.224200Z",
+     "start_time": "2024-07-18T02:43:06.221014Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from collections import deque\n",
+    "deque_list = deque()\n",
+    "for i in range(5):\n",
+    "    deque_list.appendleft(i)\n",
+    "print(deque_list)"
+   ],
+   "id": "54198e82fc9f2ceb",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([4, 3, 2, 1, 0])\n"
+     ]
+    }
+   ],
+   "execution_count": 16
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-18T02:43:06.228063Z",
+     "start_time": "2024-07-18T02:43:06.225195Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "deque_list.rotate(1)\n",
+    "print(deque_list)"
+   ],
+   "id": "dacc6ea6e9d08c64",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([0, 4, 3, 2, 1])\n"
+     ]
+    }
+   ],
+   "execution_count": 17
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-18T02:43:21.567605Z",
+     "start_time": "2024-07-18T02:43:21.564292Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "deque_list.rotate(1)\n",
+    "print(deque_list)"
+   ],
+   "id": "c9febd0dcd496bfc",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([1, 0, 4, 3, 2])\n"
+     ]
+    }
+   ],
+   "execution_count": 18
   },
   {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "60eb4c1f44f84d09"
+   "source": [
+    "# 정렬 해보기. \n",
+    "# OrderdDict , 순서있는 딕션너리 이용하기. \n",
+    "def sort_by_key(t):\n",
+    "  return t[0]\n",
+    "\n",
+    "from collections import OrderedDict\n",
+    "d= OrderedDict()\n",
+    "d[\"x\"] = 1\n",
+    "d[\"b\"] = 2\n",
+    "d[\"d\"] = 4\n",
+    "d[\"c\"] = 3\n",
+    "d[\"e\"] = 5\n",
+    "\n",
+    "# key 정렬해보기. \n",
+    "for k,v in OrderedDict(sorted(d.items(), key=sort_by_key)).items():\n",
+    "  print(f\"key : {k}, value : {v}\")"
+   ],
+   "id": "2ae93113ee69bd46"
   }
  ],
  "metadata": {
