5교시, 5장 파이썬 스타일 코드, 컴프리헨션 , enumerate, zip 기본 확인

--- a/pythonProject3/ch4_data_structure/test1.ipynb
+++ b/pythonProject3/ch4_data_structure/test1.ipynb
@@ -151,10 +151,13 @@
    "execution_count": 18
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-18T02:49:57.608160Z",
+     "start_time": "2024-07-18T02:49:57.603108Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# 정렬 해보기. \n",
     "# OrderdDict , 순서있는 딕션너리 이용하기. \n",
@@ -173,7 +176,29 @@
     "for k,v in OrderedDict(sorted(d.items(), key=sort_by_key)).items():\n",
     "  print(f\"key : {k}, value : {v}\")"
    ],
-   "id": "2ae93113ee69bd46"
+   "id": "2ae93113ee69bd46",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "key : b, value : 2\n",
+      "key : c, value : 3\n",
+      "key : d, value : 4\n",
+      "key : e, value : 5\n",
+      "key : x, value : 1\n"
+     ]
+    }
+   ],
+   "execution_count": 19
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "6c49d81916c291e6"
   }
  ],
  "metadata": {
