6교시, 6장 클래스 기본2

--- a/pythonProject3/ch6_class/test.ipynb
+++ b/pythonProject3/ch6_class/test.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-07-18T05:20:23.708759Z",
-     "start_time": "2024-07-18T05:20:23.703727Z"
+     "end_time": "2024-07-18T05:50:42.313453Z",
+     "start_time": "2024-07-18T05:50:42.308646Z"
     }
    },
    "source": [
@@ -26,13 +26,13 @@
     "        "
    ],
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 63
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-18T05:20:23.714779Z",
-     "start_time": "2024-07-18T05:20:23.709752Z"
+     "end_time": "2024-07-18T05:50:42.342039Z",
+     "start_time": "2024-07-18T05:50:42.338936Z"
     }
    },
    "cell_type": "code",
@@ -51,13 +51,13 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 64
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-18T05:20:23.719887Z",
-     "start_time": "2024-07-18T05:20:23.715775Z"
+     "end_time": "2024-07-18T05:50:42.369234Z",
+     "start_time": "2024-07-18T05:50:42.365820Z"
     }
    },
    "cell_type": "code",
@@ -72,20 +72,64 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 65
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-18T05:20:23.723880Z",
-     "start_time": "2024-07-18T05:20:23.720879Z"
+     "end_time": "2024-07-18T05:50:42.380842Z",
+     "start_time": "2024-07-18T05:50:42.376208Z"
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "# name, position, back_number\n",
+    "class LoadCat(CatSoccerPlayer):\n",
+    "    def __init__(self,name,position,back_number,team_name,salary):\n",
+    "        super().__init__(name,position,back_number)\n",
+    "        self.team_name = team_name\n",
+    "        self.salary = salary\n",
+    "    \n",
+    "    def upgrade_salary(self,new_salary):\n",
+    "        self.salary = new_salary\n",
+    "        print(f\"{self.name}님의 연봉은 곧 {new_salary}로 곧 상향됨\")\n",
+    "    \n",
+    "    def change_back_number(self,new_number):\n",
+    "        super().change_back_number()\n",
+    "        print(\"부모 메서드 호출 후, 내꺼 메서드 호출함. \")\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return \"안녕하세용 길고양이 선수 : %s, 연봉은 : %s , 소속팀은: %s 만나서 반가워요\" % (self.name, self.position, self.back_number)\n",
+    "        \n",
+    "    "
+   ],
    "id": "2be75f4ec796bc1d",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 66
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-18T05:50:42.386157Z",
+     "start_time": "2024-07-18T05:50:42.381844Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "lsyLoadCat = LoadCat(\"상용길고양이\",\"MF\",\"100\",\"한국 국가대표 길고양이팀\",\"1억\")\n",
+    "print(lsyLoadCat)"
+   ],
+   "id": "f9e6402e3f7d0604",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "안녕하세용 길고양이 선수 : 상용길고양이, 연봉은 : MF , 소속팀은: 100 만나서 반가워요\n"
+     ]
+    }
+   ],
+   "execution_count": 67
   }
  ],
  "metadata": {
