6교시, 6장 클래스 기본3,외부 접근 가능 @property 확인

--- a/pythonProject3/ch6_class/test.ipynb
+++ b/pythonProject3/ch6_class/test.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-07-18T05:50:42.313453Z",
-     "start_time": "2024-07-18T05:50:42.308646Z"
+     "end_time": "2024-07-18T05:56:21.942306Z",
+     "start_time": "2024-07-18T05:56:21.938441Z"
     }
    },
    "source": [
@@ -26,13 +26,13 @@
     "        "
    ],
    "outputs": [],
-   "execution_count": 63
+   "execution_count": 76
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-18T05:50:42.342039Z",
-     "start_time": "2024-07-18T05:50:42.338936Z"
+     "end_time": "2024-07-18T05:56:21.973021Z",
+     "start_time": "2024-07-18T05:56:21.969042Z"
     }
    },
    "cell_type": "code",
@@ -51,13 +51,13 @@
      ]
     }
    ],
-   "execution_count": 64
+   "execution_count": 77
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-18T05:50:42.369234Z",
-     "start_time": "2024-07-18T05:50:42.365820Z"
+     "end_time": "2024-07-18T05:56:22.002371Z",
+     "start_time": "2024-07-18T05:56:21.997130Z"
     }
    },
    "cell_type": "code",
@@ -72,13 +72,13 @@
      ]
     }
    ],
-   "execution_count": 65
+   "execution_count": 78
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-18T05:50:42.380842Z",
-     "start_time": "2024-07-18T05:50:42.376208Z"
+     "end_time": "2024-07-18T05:56:22.018776Z",
+     "start_time": "2024-07-18T05:56:22.007326Z"
     }
    },
    "cell_type": "code",
@@ -95,23 +95,23 @@
     "        print(f\"{self.name}님의 연봉은 곧 {new_salary}로 곧 상향됨\")\n",
     "    \n",
     "    def change_back_number(self,new_number):\n",
-    "        super().change_back_number()\n",
+    "        super().change_back_number(new_number)\n",
     "        print(\"부모 메서드 호출 후, 내꺼 메서드 호출함. \")\n",
     "    \n",
     "    def __str__(self):\n",
-    "        return \"안녕하세용 길고양이 선수 : %s, 연봉은 : %s , 소속팀은: %s 만나서 반가워요\" % (self.name, self.position, self.back_number)\n",
+    "        return \"안녕하세용 길고양이 선수 : %s, 연봉은 : %s , 소속팀은: %s 만나서 반가워요\" % (self.name, self.salary, self.team_name)\n",
     "        \n",
     "    "
    ],
    "id": "2be75f4ec796bc1d",
    "outputs": [],
-   "execution_count": 66
+   "execution_count": 79
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-18T05:50:42.386157Z",
-     "start_time": "2024-07-18T05:50:42.381844Z"
+     "end_time": "2024-07-18T05:56:22.037331Z",
+     "start_time": "2024-07-18T05:56:22.032796Z"
     }
    },
    "cell_type": "code",
@@ -125,11 +125,88 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "안녕하세용 길고양이 선수 : 상용길고양이, 연봉은 : MF , 소속팀은: 100 만나서 반가워요\n"
+      "안녕하세용 길고양이 선수 : 상용길고양이, 연봉은 : 1억 , 소속팀은: 한국 국가대표 길고양이팀 만나서 반가워요\n"
      ]
     }
    ],
-   "execution_count": 67
+   "execution_count": 80
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-18T05:56:22.063466Z",
+     "start_time": "2024-07-18T05:56:22.060477Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "lsyLoadCat.upgrade_salary(\"2억\")",
+   "id": "99af56bea0f507d6",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "상용길고양이님의 연봉은 곧 2억로 곧 상향됨\n"
+     ]
+    }
+   ],
+   "execution_count": 81
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-18T05:56:22.068820Z",
+     "start_time": "2024-07-18T05:56:22.064463Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(lsyLoadCat)",
+   "id": "2329e6783c1ddf9",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "안녕하세용 길고양이 선수 : 상용길고양이, 연봉은 : 2억 , 소속팀은: 한국 국가대표 길고양이팀 만나서 반가워요\n"
+     ]
+    }
+   ],
+   "execution_count": 82
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-18T05:56:22.072873Z",
+     "start_time": "2024-07-18T05:56:22.069816Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "lsyLoadCat.change_back_number(\"300\")",
+   "id": "eae6e87af0225b08",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "현재 등번호 100 to 300\n",
+      "부모 메서드 호출 후, 내꺼 메서드 호출함. \n"
+     ]
+    }
+   ],
+   "execution_count": 83
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-18T05:56:22.076770Z",
+     "start_time": "2024-07-18T05:56:22.074863Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "7f30bf4fb7c60c4c",
+   "outputs": [],
+   "execution_count": 83
   }
  ],
  "metadata": {
