--- a/pythonProject3/ch8_database_mariadb/test.ipynb
+++ b/pythonProject3/ch8_database_mariadb/test.ipynb
@@ -16,6 +16,107 @@
     ");"
    ],
    "id": "5904e465000bff88"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-18T07:16:04.460079Z",
+     "start_time": "2024-07-18T07:16:04.451351Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#마리아디비 연결 설정\n",
+    "import pymysql\n",
+    "\n",
+    "conn = pymysql.connect(\n",
+    "host='127.0.0.1', \n",
+    "user='root', \n",
+    "password='123456',\n",
+    " db='pydb', \n",
+    "charset='utf8')\n",
+    "\n",
+    "cur = conn.cursor()\n"
+   ],
+   "id": "7156f9e2490861c7",
+   "outputs": [],
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-18T07:16:04.485790Z",
+     "start_time": "2024-07-18T07:16:04.478024Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#select 예제\n",
+    "cur.execute(\"SELECT * FROM book\")\n",
+    "\n",
+    "print(\"ID    title    writer         \")\n",
+    "print(\"--------------------------------------------------------\")\n",
+    "\n",
+    "while (True):\n",
+    "    row = cur.fetchone()\n",
+    "    if row == None:\n",
+    "        break\n",
+    "    data1 = row[0]\n",
+    "    data2 = row[1]\n",
+    "    data3 = row[2]\n",
+    "    \n",
+    "    print(\"%5s   %15s   %15s \\n\" % (data1, data2, data3))\n",
+    "    # print(f\" ID: {data1}, title: {data2}, writer: {data3}\")\n",
+    "\n",
+    "conn.close()"
+   ],
+   "id": "ee7173f9fbc55559",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID    title    writer         \n",
+      "--------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-18T07:16:04.495302Z",
+     "start_time": "2024-07-18T07:16:04.487788Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#insert 예제\n",
+    "def insert_book(data):\n",
+    " conn=pymysql.connect(host='localhost',user='root',password='123456', db='pydb', charset='utf8')\n",
+    " cursor=conn.cursor()\n",
+    " sql=\"insert into book(title,pub,pages,author) values(%s,%s,%s,%s)\"\n",
+    " cursor.execute(sql,data)\n",
+    " conn.commit()\n",
+    " conn.close()\n",
+    "data=('안드로이드','한빛',650,'홍길동')\n",
+    "insert_book(data)\n",
+    "def insert_book_list(datas):\n",
+    "    conn=pymysql.connect(host='localhost',user='pgm',password='1234',db='pydb1',charset='utf8')\n",
+    "    cursor=conn.cursor()\n",
+    "    sql=\"insert into book(title,pub,pages,author) values(%s,%s,%s,%s)\"\n",
+    "    cursor.executemany(sql,datas)\n",
+    "    conn.commit()\n",
+    "    conn.close()\n",
+    "# datas=[('안드로이드','한빛',650,'홍길동'),\n",
+    "#  ('Oracle DB','한빛',650,'홍길동'),\n",
+    "#  ('Spring','영딘',650,'홍길동')]\n",
+    "# insert_book_list(datas)"
+   ],
+   "id": "360a49f003062357",
+   "outputs": [],
+   "execution_count": 13
   }
  ],
  "metadata": {
