7교시, 8장, database 샘플 추가, 조회, 추가 예제

--- a/pythonProject3/ch8_database_mariadb/test.ipynb
+++ b/pythonProject3/ch8_database_mariadb/test.ipynb
@@ -20,38 +20,36 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-18T07:16:04.460079Z",
-     "start_time": "2024-07-18T07:16:04.451351Z"
+     "end_time": "2024-07-18T07:20:33.877350Z",
+     "start_time": "2024-07-18T07:20:33.872541Z"
     }
    },
    "cell_type": "code",
    "source": [
     "#마리아디비 연결 설정\n",
-    "import pymysql\n",
-    "\n",
+    "import pymysql\n"
+   ],
+   "id": "7156f9e2490861c7",
+   "outputs": [],
+   "execution_count": 14
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-18T07:21:52.549045Z",
+     "start_time": "2024-07-18T07:21:52.542064Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#select 예제\n",
     "conn = pymysql.connect(\n",
     "host='127.0.0.1', \n",
     "user='root', \n",
     "password='123456',\n",
     " db='pydb', \n",
     "charset='utf8')\n",
-    "\n",
-    "cur = conn.cursor()\n"
-   ],
-   "id": "7156f9e2490861c7",
-   "outputs": [],
-   "execution_count": 11
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-07-18T07:16:04.485790Z",
-     "start_time": "2024-07-18T07:16:04.478024Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "#select 예제\n",
+    "cur = conn.cursor()\n",
     "cur.execute(\"SELECT * FROM book\")\n",
     "\n",
     "print(\"ID    title    writer         \")\n",
@@ -77,46 +75,66 @@
      "output_type": "stream",
      "text": [
       "ID    title    writer         \n",
-      "--------------------------------------------------------\n"
+      "--------------------------------------------------------\n",
+      "    1             안드로이드                한빛 \n",
+      "\n",
+      "    2             안드로이드                한빛 \n",
+      "\n",
+      "    3             안드로이드                한빛 \n",
+      "\n",
+      "    4         Oracle DB                한빛 \n",
+      "\n",
+      "    5            Spring                영딘 \n",
+      "\n",
+      "    6             안드로이드                한빛 \n",
+      "\n",
+      "    7             안드로이드                한빛 \n",
+      "\n",
+      "    8         Oracle DB                한빛 \n",
+      "\n",
+      "    9            Spring                영딘 \n",
+      "\n"
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-18T07:16:04.495302Z",
-     "start_time": "2024-07-18T07:16:04.487788Z"
+     "end_time": "2024-07-18T07:21:43.905878Z",
+     "start_time": "2024-07-18T07:21:43.875184Z"
     }
    },
    "cell_type": "code",
    "source": [
     "#insert 예제\n",
     "def insert_book(data):\n",
-    " conn=pymysql.connect(host='localhost',user='root',password='123456', db='pydb', charset='utf8')\n",
-    " cursor=conn.cursor()\n",
-    " sql=\"insert into book(title,pub,pages,author) values(%s,%s,%s,%s)\"\n",
-    " cursor.execute(sql,data)\n",
-    " conn.commit()\n",
-    " conn.close()\n",
+    "    conn=pymysql.connect(host='localhost',user='root',password='123456', db='pydb', charset='utf8')\n",
+    "    cursor=conn.cursor()\n",
+    "    sql=\"insert into book(title,pub,pages,author) values(%s,%s,%s,%s)\"\n",
+    "    cursor.execute(sql,data)\n",
+    "    conn.commit()\n",
+    "    conn.close()\n",
+    "    \n",
     "data=('안드로이드','한빛',650,'홍길동')\n",
     "insert_book(data)\n",
+    "\n",
     "def insert_book_list(datas):\n",
-    "    conn=pymysql.connect(host='localhost',user='pgm',password='1234',db='pydb1',charset='utf8')\n",
+    "    conn=pymysql.connect(host='localhost',user='root',password='123456',db='pydb',charset='utf8')\n",
     "    cursor=conn.cursor()\n",
     "    sql=\"insert into book(title,pub,pages,author) values(%s,%s,%s,%s)\"\n",
     "    cursor.executemany(sql,datas)\n",
     "    conn.commit()\n",
     "    conn.close()\n",
-    "# datas=[('안드로이드','한빛',650,'홍길동'),\n",
-    "#  ('Oracle DB','한빛',650,'홍길동'),\n",
-    "#  ('Spring','영딘',650,'홍길동')]\n",
-    "# insert_book_list(datas)"
+    "datas=[('안드로이드','한빛',650,'홍길동'),\n",
+    " ('Oracle DB','한빛',650,'홍길동'),\n",
+    " ('Spring','영딘',650,'홍길동')]\n",
+    "insert_book_list(datas)"
    ],
    "id": "360a49f003062357",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 21
   }
  ],
  "metadata": {
