1교시,정적 크롤링, 요소 선택 연습해보기

--- a/pythonProject3/ch9_crawling/static_bs4/test1.ipynb
+++ b/pythonProject3/ch9_crawling/static_bs4/test1.ipynb
@@ -23,6 +23,17 @@
    "id": "92ef59509734138b"
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# 공식문서1\n",
+    "# https://www.crummy.com/software/BeautifulSoup/bs4/doc/#quick-start"
+   ],
+   "id": "3c0ec49c016badf9"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-07-19T00:34:03.043573Z",
