--- a/pythonProject3/ch9_crawling/static_bs4/test2.ipynb
+++ b/pythonProject3/ch9_crawling/static_bs4/test2.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-07-19T00:49:30.699253Z",
-     "start_time": "2024-07-19T00:49:30.631936Z"
+     "end_time": "2024-07-19T01:10:53.022482Z",
+     "start_time": "2024-07-19T01:10:53.016231Z"
     }
    },
    "source": [
@@ -20,6 +20,15 @@
     "# 해당 웹 문서에서 div 태그 요소 선택 하기\n",
     "tag_div = bsObject.find('div')\n",
     "print(tag_div)\n",
+    "\n",
+    "tag_ul = bsObject.find('ul')\n",
+    "print(tag_ul)\n",
+    "\n",
+    "tag_li = bsObject.find('li')\n",
+    "print(tag_li)\n",
+    "\n",
+    "tag_lis = bsObject.findAll('li')\n",
+    "print(tag_lis)\n",
     "\n"
    ],
    "outputs": [
@@ -27,11 +36,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<div> 요기를 클릭하세요 </div>\n"
+      "<div> 요기를 클릭하세요 </div>\n",
+      "<ul>\n",
+      "<li> 한빛출판네트워크 </li>\n",
+      "<li> 비기너 </li>\n",
+      "<li> 데이터 분석 </li>\n",
+      "</ul>\n",
+      "<li> 한빛출판네트워크 </li>\n",
+      "[<li> 한빛출판네트워크 </li>, <li> 비기너 </li>, <li> 데이터 분석 </li>]\n"
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 4
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "46de314748c205d0"
   }
  ],
  "metadata": {
