--- a/pythonProject3/ch9_crawling/static_bs4/test2.ipynb
+++ b/pythonProject3/ch9_crawling/static_bs4/test2.ipynb
@@ -50,12 +50,48 @@
    "execution_count": 4
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-19T01:19:12.341565Z",
+     "start_time": "2024-07-19T01:19:12.336066Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import bs4\n",
+    "\n",
+    "# 물리 파일 html 문서를 읽어서, text ,utf-8 읽기\n",
+    "webPage = open(\"D:/PyTestBusanIt501/pythonProject3/ch9_crawling/static_bs4/Sample03.html\",\"rt\",encoding=\"utf-8\").read()\n",
+    "# html 문서로 보기좋게 변환하기.\n",
+    "bsObject = bs4.BeautifulSoup(webPage,\"html.parser\")\n",
+    "\n",
+    "#각 태그의 클래스, 아이디, 속성의 값을 조회 해보기. 연습 \n",
+    "tag = bsObject.find('div', {'id' :'myId1'})\n",
+    "tag_text = tag.text\n",
+    "print(tag)\n",
+    "print(tag_text)\n",
+    "\n"
+   ],
+   "id": "46de314748c205d0",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<div id=\"myId1\"> 아기공룡 </div>\n",
+      " 아기공룡 \n"
+     ]
+    }
+   ],
+   "execution_count": 6
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "46de314748c205d0"
+   "id": "5ecc915c767d105f"
   }
  ],
  "metadata": {
