--- a/pythonProject3/ch9_crawling/static_bs4/test2.ipynb
+++ b/pythonProject3/ch9_crawling/static_bs4/test2.ipynb
@@ -52,8 +52,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-19T01:19:12.341565Z",
-     "start_time": "2024-07-19T01:19:12.336066Z"
+     "end_time": "2024-07-19T01:24:49.961859Z",
+     "start_time": "2024-07-19T01:24:49.953868Z"
     }
    },
    "cell_type": "code",
@@ -70,6 +70,20 @@
     "tag_text = tag.text\n",
     "print(tag)\n",
     "print(tag_text)\n",
+    "\n",
+    "tag_class = bsObject.find('div', {'class':'myClass1'} )\n",
+    "tag_class_text = tag_class.text\n",
+    "print(tag_class)\n",
+    "print(tag_class_text)\n",
+    "\n",
+    "tag_li_list = bsObject.findAll('li',{'class':'myClass3'})\n",
+    "print(tag_li_list)\n",
+    "\n",
+    "tag_alist = bsObject.findAll('a')\n",
+    "print(tag_alist)\n",
+    "\n",
+    "for aTag in tag_alist:\n",
+    "    print(aTag['href'])\n",
     "\n"
    ],
    "id": "46de314748c205d0",
@@ -79,11 +93,18 @@
      "output_type": "stream",
      "text": [
       "<div id=\"myId1\"> 아기공룡 </div>\n",
-      " 아기공룡 \n"
+      " 아기공룡 \n",
+      "<div class=\"myClass1\"> 내 친구 </div>\n",
+      " 내 친구 \n",
+      "[<li class=\"myClass3\"> 비기너 </li>, <li class=\"myClass3\"> 시리즈 </li>]\n",
+      "[<a href=\"www.daum.net\"> 다음 바로가기 </a>, <a href=\"www.nate.com\"> 네이트 바로가기 </a>, <a href=\"www.naver.com\"> 네이버 바로가기 </a>]\n",
+      "www.daum.net\n",
+      "www.nate.com\n",
+      "www.naver.com\n"
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 9
   },
   {
    "metadata": {},
