2교시,정적 크롤링, 요소 선택 nate 에서 요소 접근 연습1

--- a/pythonProject3/ch9_crawling/static_bs4/test2.ipynb
+++ b/pythonProject3/ch9_crawling/static_bs4/test2.ipynb
@@ -52,8 +52,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-19T01:24:49.961859Z",
-     "start_time": "2024-07-19T01:24:49.953868Z"
+     "end_time": "2024-07-19T01:31:31.831663Z",
+     "start_time": "2024-07-19T01:31:31.819105Z"
     }
    },
    "cell_type": "code",
@@ -84,7 +84,12 @@
     "\n",
     "for aTag in tag_alist:\n",
     "    print(aTag['href'])\n",
-    "\n"
+    "    \n",
+    "tag_li_all = bsObject.findAll('li')\n",
+    "print(tag_li_all)\n",
+    "\n",
+    "for i in range(len(tag_li_all)):\n",
+    "    print(tag_li_all[i].text)\n"
    ],
    "id": "46de314748c205d0",
    "outputs": [
@@ -100,11 +105,16 @@
       "[<a href=\"www.daum.net\"> 다음 바로가기 </a>, <a href=\"www.nate.com\"> 네이트 바로가기 </a>, <a href=\"www.naver.com\"> 네이버 바로가기 </a>]\n",
       "www.daum.net\n",
       "www.nate.com\n",
-      "www.naver.com\n"
+      "www.naver.com\n",
+      "[<li> 한빛아카데미 </li>, <li> 한빛미디어 </li>, <li class=\"myClass3\"> 비기너 </li>, <li class=\"myClass3\"> 시리즈 </li>]\n",
+      " 한빛아카데미 \n",
+      " 한빛미디어 \n",
+      " 비기너 \n",
+      " 시리즈 \n"
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 11
   },
   {
    "metadata": {},
