2교시,정적 크롤링, 요소 선택 nate 에서 요소 접근 연습2

--- a/pythonProject3/ch9_crawling/static_bs4/test3.ipynb
+++ b/pythonProject3/ch9_crawling/static_bs4/test3.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-07-19T01:42:46.190022Z",
-     "start_time": "2024-07-19T01:42:45.930691Z"
+     "end_time": "2024-07-19T01:48:56.901407Z",
+     "start_time": "2024-07-19T01:48:56.787864Z"
     }
    },
    "source": [
@@ -26,29 +26,39 @@
     "bsObject = bs4.BeautifulSoup(htmlObject, \"html.parser\")\n",
     "\n",
     "#div , id : NateBi \n",
-    "tag_div_id = bsObject.findAll('div', {'id' : 'NateBi'})\n",
-    "print(tag_div_id)"
+    "tag_div_id = bsObject.find('div', {'id' : 'NateBi'})\n",
+    "print(tag_div_id)\n",
+    "\n",
+    "# 방금 접근한 id NateBi 의 하위 태그인 a 태그에 접근하기. \n",
+    "tag_div_id_h1 = tag_div_id.find('a')\n",
+    "print(tag_div_id_h1)"
    ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<div class=\"area_bi\" id=\"NateBi\" role=\"banner\">\n",
+      "<div class=\"area_bi\" id=\"NateBi\" role=\"banner\">\n",
       "<h1 class=\"bi\" title=\"네이트\"><a href=\"//www.nate.com/?f=bi\" onmousedown=\"nc('NBI01');\">네이트</a></h1>\n",
-      "</div>]\n"
+      "</div>\n",
+      "<a href=\"//www.nate.com/?f=bi\" onmousedown=\"nc('NBI01');\">네이트</a>\n"
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 5
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-19T01:48:56.904428Z",
+     "start_time": "2024-07-19T01:48:56.902424Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "591f0f364463e35c"
+   "id": "591f0f364463e35c",
+   "outputs": [],
+   "execution_count": 5
   }
  ],
  "metadata": {
