--- a/pythonProject3/ch9_crawling/static_bs4/test3.ipynb
+++ b/pythonProject3/ch9_crawling/static_bs4/test3.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-07-19T01:48:56.901407Z",
-     "start_time": "2024-07-19T01:48:56.787864Z"
+     "end_time": "2024-07-19T02:03:14.430523Z",
+     "start_time": "2024-07-19T02:03:14.325676Z"
     }
    },
    "source": [
@@ -30,8 +30,12 @@
     "print(tag_div_id)\n",
     "\n",
     "# 방금 접근한 id NateBi 의 하위 태그인 a 태그에 접근하기. \n",
-    "tag_div_id_h1 = tag_div_id.find('a')\n",
-    "print(tag_div_id_h1)"
+    "tag_div_id_a = tag_div_id.find('a')\n",
+    "print(tag_div_id_a)\n",
+    "\n",
+    "tag_div_id_a_href = tag_div_id_a['href']\n",
+    "print(tag_div_id_a_href)\n",
+    "\n"
    ],
    "outputs": [
     {
@@ -41,24 +45,82 @@
       "<div class=\"area_bi\" id=\"NateBi\" role=\"banner\">\n",
       "<h1 class=\"bi\" title=\"네이트\"><a href=\"//www.nate.com/?f=bi\" onmousedown=\"nc('NBI01');\">네이트</a></h1>\n",
       "</div>\n",
-      "<a href=\"//www.nate.com/?f=bi\" onmousedown=\"nc('NBI01');\">네이트</a>\n"
+      "<a href=\"//www.nate.com/?f=bi\" onmousedown=\"nc('NBI01');\">네이트</a>\n",
+      "//www.nate.com/?f=bi\n"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-19T01:48:56.904428Z",
-     "start_time": "2024-07-19T01:48:56.902424Z"
+     "end_time": "2024-07-19T02:12:11.001780Z",
+     "start_time": "2024-07-19T02:12:10.926252Z"
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "# <div class=\"snbArea\" role=\"navigation\">\n",
+    "# \t\t<ul>\n",
+    "# \t\t\t<!-- 현제 페이지에 해당하는 경우 current=\"page\" 추가 -->\n",
+    "# \t\t\t<li class=\"on\"><h1><a onclick=\"ndrclick('SNB01');\" href=\"//news.nate.com/\" aria-current=\"page\">오늘</a></h1></li> \n",
+    "# \t\t\t<li ><a onclick=\"ndrclick('SNB02');\" href=\"//news.nate.com/total\" >종합</a></li> \n",
+    "# \t\t\t<li ><a onclick=\"ndrclick('RIG01');\" href=\"//news.nate.com/recent?mid=n0100\" >최신뉴스</a></li> \n",
+    "\n",
+    "import bs4 \n",
+    "import urllib.request\n",
+    "\n",
+    "nateUrl = \"https://news.nate.com/\"\n",
+    "# 접근 할려는 사이트 주소의 객체를 생성\n",
+    "htmlObject = urllib.request.urlopen(nateUrl)\n",
+    "# 정리 정돈 된 태그들의 트리 보기. \n",
+    "bsObject = bs4.BeautifulSoup(htmlObject, \"html.parser\")\n",
+    "\n",
+    "tag_div_class_snbArea = bsObject.find('div', {'class' : 'snbArea'})\n",
+    "print(tag_div_class_snbArea)\n"
+   ],
    "id": "591f0f364463e35c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<div class=\"snbArea\" role=\"navigation\">\n",
+      "<ul>\n",
+      "<!-- 현제 페이지에 해당하는 경우 current=\"page\" 추가 -->\n",
+      "<li class=\"on\"><h1><a aria-current=\"page\" href=\"//news.nate.com/\" onclick=\"ndrclick('SNB01');\">오늘</a></h1></li>\n",
+      "<li><a href=\"//news.nate.com/total\" onclick=\"ndrclick('SNB02');\">종합</a></li>\n",
+      "<li><a href=\"//news.nate.com/recent?mid=n0100\" onclick=\"ndrclick('RIG01');\">최신뉴스</a></li>\n",
+      "<li><a href=\"//news.nate.com/section?mid=n0200\" onclick=\"ndrclick('RIG12');\">정치</a></li>\n",
+      "<li><a href=\"//news.nate.com/section?mid=n0300\" onclick=\"ndrclick('RIG22');\">경제</a></li>\n",
+      "<li><a href=\"//news.nate.com/section?mid=n0400\" onclick=\"ndrclick('RIG33');\">사회</a></li>\n",
+      "<li><a href=\"//news.nate.com/section?mid=n0500\" onclick=\"ndrclick('RIG47');\">세계</a></li>\n",
+      "<li><a href=\"//news.nate.com/section?mid=n0600\" onclick=\"ndrclick('RIG57');\">IT/과학</a></li>\n",
+      "<li><a href=\"//news.nate.com/column\" onclick=\"ndrclick('RIG67');\">칼럼</a></li>\n",
+      "<li><a href=\"//news.nate.com/photo\" onclick=\"ndrclick('RIG74');\">포토</a></li>\n",
+      "<li><a href=\"//news.nate.com/tv?mid=n0900\" onclick=\"ndrclick('RIG85');\">TV</a></li>\n",
+      "<li><a href=\"//news.nate.com/radio/list\" onclick=\"ndrclick('RIR00');\">라디오</a></li>\n",
+      "<li><a href=\"//news.nate.com/rank/?mid=n1000\" onclick=\"ndrclick('RIR00');\">랭킹뉴스</a></li>\n",
+      "<li><a href=\"//news.nate.com/comment?mid=n1500\" onclick=\"ndrclick('RIR08');\">투데이댓글</a></li>\n",
+      "</ul>\n",
+      "<!-- SNB 배너 -->\n",
+      "<div class=\"svcLink\">\n",
+      "</div>\n",
+      "<!-- //SNB 배너 -->\n",
+      "</div>\n"
+     ]
+    }
+   ],
+   "execution_count": 7
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": null,
+   "source": "",
+   "id": "7955f7822809995"
   }
  ],
  "metadata": {
