3교시,정적 크롤링, 요소 선택 nate 뉴스에서 연습해보기2

--- a/pythonProject3/ch9_crawling/static_bs4/test3.ipynb
+++ b/pythonProject3/ch9_crawling/static_bs4/test3.ipynb
@@ -55,8 +55,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-19T02:12:11.001780Z",
-     "start_time": "2024-07-19T02:12:10.926252Z"
+     "end_time": "2024-07-19T02:16:26.710357Z",
+     "start_time": "2024-07-19T02:16:26.633944Z"
     }
    },
    "cell_type": "code",
@@ -78,7 +78,15 @@
     "bsObject = bs4.BeautifulSoup(htmlObject, \"html.parser\")\n",
     "\n",
     "tag_div_class_snbArea = bsObject.find('div', {'class' : 'snbArea'})\n",
-    "print(tag_div_class_snbArea)\n"
+    "print(tag_div_class_snbArea)\n",
+    "\n",
+    "tag_div_class_snbArea_li = tag_div_class_snbArea.findAll('li')\n",
+    "print(tag_div_class_snbArea_li)\n",
+    "\n",
+    "for li in tag_div_class_snbArea_li:\n",
+    "    a_tag = li.find('a')\n",
+    "    a_tag_href = a_tag['href']\n",
+    "    print(a_tag_href)\n"
    ],
    "id": "591f0f364463e35c",
    "outputs": [
@@ -108,11 +116,26 @@
       "<div class=\"svcLink\">\n",
       "</div>\n",
       "<!-- //SNB 배너 -->\n",
-      "</div>\n"
+      "</div>\n",
+      "[<li class=\"on\"><h1><a aria-current=\"page\" href=\"//news.nate.com/\" onclick=\"ndrclick('SNB01');\">오늘</a></h1></li>, <li><a href=\"//news.nate.com/total\" onclick=\"ndrclick('SNB02');\">종합</a></li>, <li><a href=\"//news.nate.com/recent?mid=n0100\" onclick=\"ndrclick('RIG01');\">최신뉴스</a></li>, <li><a href=\"//news.nate.com/section?mid=n0200\" onclick=\"ndrclick('RIG12');\">정치</a></li>, <li><a href=\"//news.nate.com/section?mid=n0300\" onclick=\"ndrclick('RIG22');\">경제</a></li>, <li><a href=\"//news.nate.com/section?mid=n0400\" onclick=\"ndrclick('RIG33');\">사회</a></li>, <li><a href=\"//news.nate.com/section?mid=n0500\" onclick=\"ndrclick('RIG47');\">세계</a></li>, <li><a href=\"//news.nate.com/section?mid=n0600\" onclick=\"ndrclick('RIG57');\">IT/과학</a></li>, <li><a href=\"//news.nate.com/column\" onclick=\"ndrclick('RIG67');\">칼럼</a></li>, <li><a href=\"//news.nate.com/photo\" onclick=\"ndrclick('RIG74');\">포토</a></li>, <li><a href=\"//news.nate.com/tv?mid=n0900\" onclick=\"ndrclick('RIG85');\">TV</a></li>, <li><a href=\"//news.nate.com/radio/list\" onclick=\"ndrclick('RIR00');\">라디오</a></li>, <li><a href=\"//news.nate.com/rank/?mid=n1000\" onclick=\"ndrclick('RIR00');\">랭킹뉴스</a></li>, <li><a href=\"//news.nate.com/comment?mid=n1500\" onclick=\"ndrclick('RIR08');\">투데이댓글</a></li>]\n",
+      "//news.nate.com/\n",
+      "//news.nate.com/total\n",
+      "//news.nate.com/recent?mid=n0100\n",
+      "//news.nate.com/section?mid=n0200\n",
+      "//news.nate.com/section?mid=n0300\n",
+      "//news.nate.com/section?mid=n0400\n",
+      "//news.nate.com/section?mid=n0500\n",
+      "//news.nate.com/section?mid=n0600\n",
+      "//news.nate.com/column\n",
+      "//news.nate.com/photo\n",
+      "//news.nate.com/tv?mid=n0900\n",
+      "//news.nate.com/radio/list\n",
+      "//news.nate.com/rank/?mid=n1000\n",
+      "//news.nate.com/comment?mid=n1500\n"
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 9
   },
   {
    "metadata": {},
