3교시,정적 크롤링, csv 파일에 출력해보기, 네이트 날씨 정보에서 오늘의 날씨 크롤링 준비

--- a/pythonProject3/ch9_crawling/static_bs4/test4_csv.ipynb
+++ b/pythonProject3/ch9_crawling/static_bs4/test4_csv.ipynb
@@ -71,7 +71,36 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [
+    "#네이트 뉴스 -> 날씨 -> 경상남도 -> 부산에서 날씨정보 가져와서, \n",
+    "# csv 파일에 쓰기 작업.\n",
+    "# 준비물1\n",
+    "# https://news.nate.com/weather?areaCode=11H20201\n",
+    "# 어느 경로에 물리파일 생성 할지.\n",
+    "# 준비물2\n",
+    "# 경로 : \n",
+    "# D:/PyTestBusanIt501/pythonProject3/ch9_crawling/static_bs4/news_weather_datetime_240719.csv\n",
+    "\n",
+    "# 준비물3\n",
+    "# 해당 가지고 올 정보들의 태그 정보가 필요함. \n",
+    "# 온도, 습도, 강수량, 풍향\n",
+    "# <div class=\"right_today\">\n",
+    "# \t\t온도!!!!!!!!!!!!\t\t\t\t\t<div class=\"temperature\">\n",
+    "# \t\t\t\t\t\t\t\t<p class=\"celsius\">27<span class=\"hide\">℃</span></p><!-- minus일경우 클래스 추가 -->\n",
+    "# \t\t\t\t\t\t\t\t<p class=\"min_max\">\n",
+    "# \t\t\t\t\t\t\t\t\t<span class=\"maximum\">최고 27℃</span>\n",
+    "# \t\t\t\t\t\t\t\t\t<span class=\"minimum\">최저 23℃</span>\n",
+    "# \t\t\t\t\t\t\t\t</p>\n",
+    "# \t\t\t\t\t\t\t</div>\n",
+    "# \t\t\t\t\t\t\t<p class=\"comparison\">\n",
+    "# \t\t\t\t\t\t\t<span >\n",
+    "# \t\t\t\t\t\t\t\t<em class=\"hide\">어제보다</em></span><!-- 어제와같음클래스:same, 기본:클래스없음 -->\n",
+    "# \t\t\t\t\t\t\t\t<em class=\"plus\">+1℃</em><!-- 클래스없음 기본 plus 노란색 --></p>\n",
+    "# \t\t\t\t\t\t\t<div class=\"hrw_area\"><!-- lv1: 0~34%, lv2:35~70%, lv3:80~100% -->\n",
+    "# \t\t\t습도!!!!!!!!!!!!\t\t\t\t\t<p class=\"humidity\"><span><span class=\"hide\">습도</span></span><em>78%</em></p>\n",
+    "# \t\t강수량!!!!!!!!!!!!\t\t\t\t\t\t<p class=\"rainfall\"><span><span class=\"hide\">강수량</span></span><em>4.0mm</em></p>\t\n",
+    "# \t\t풍향!!!!!!!!!! <p class=\"wind\"><span><span class=\"hide\">풍향</span></span><em> 남서 4.5 m/s</em></p>\n"
+   ],
    "id": "7338fa4f5bc9b0aa"
   }
  ],
