--- a/pythonProject3/ch9_crawling/static_bs4/test4_csv.ipynb
+++ b/pythonProject3/ch9_crawling/static_bs4/test4_csv.ipynb
@@ -67,10 +67,13 @@
    "execution_count": 2
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-19T03:19:07.969643Z",
+     "start_time": "2024-07-19T03:19:07.795764Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "#네이트 뉴스 -> 날씨 -> 경상남도 -> 부산에서 날씨정보 가져와서, \n",
     "# csv 파일에 쓰기 작업.\n",
@@ -99,9 +102,78 @@
     "# \t\t\t\t\t\t\t<div class=\"hrw_area\"><!-- lv1: 0~34%, lv2:35~70%, lv3:80~100% -->\n",
     "# \t\t\t습도!!!!!!!!!!!!\t\t\t\t\t<p class=\"humidity\"><span><span class=\"hide\">습도</span></span><em>78%</em></p>\n",
     "# \t\t강수량!!!!!!!!!!!!\t\t\t\t\t\t<p class=\"rainfall\"><span><span class=\"hide\">강수량</span></span><em>4.0mm</em></p>\t\n",
-    "# \t\t풍향!!!!!!!!!! <p class=\"wind\"><span><span class=\"hide\">풍향</span></span><em> 남서 4.5 m/s</em></p>\n"
+    "# \t\t풍향!!!!!!!!!! <p class=\"wind\"><span><span class=\"hide\">풍향</span></span><em> 남서 4.5 m/s</em></p>\n",
+    "\n",
+    "\n",
+    "import csv\n",
+    "import time\n",
+    "import datetime\n",
+    "import bs4\n",
+    "import urllib.request\n",
+    "\n",
+    "# csv 파일을 저장할 물리 경로 지정.\n",
+    "csvName = \"D:/PyTestBusanIt501/pythonProject3/ch9_crawling/static_bs4/news_weather_datetime_240719.csv\"\n",
+    "\n",
+    "# with 구문은, 파일 객체를 자동으로 반납하는 기능이 포함. \n",
+    "with open(csvName, \"w\", newline=\"\", encoding=\"UTF-8\") as csvfile:\n",
+    "    csvwriter = csv.writer(csvfile)\n",
+    "    # 행에 정보 넣기\n",
+    "    csvwriter.writerow(['연월일','시분초','온도','습도','강수량','풍향'])\n",
+    "\n",
+    "#날씨 정보 가져오기. \n",
+    "new_weather_nate_url = 'https://news.nate.com/weather?areaCode=11H20201'\n",
+    "web_page = urllib.request.urlopen(new_weather_nate_url)\n",
+    "bsObject = bs4.BeautifulSoup(web_page,\"html.parser\")\n",
+    "\n",
+    "count = 1\n",
+    "\n",
+    "while count > 0:\n",
+    "    count -= 1\n",
+    "    # <div class=\"right_today\"> 하위에 관련 정보 태그들 다 있음. \n",
+    "    tag_right_today = bsObject.find('div',{'class' : 'right_today'})\n",
+    "    # <p class=\"celsius\">27\n",
+    "    celsius = tag_right_today.find('p',{'class' : 'celsius'}).text\n",
+    "    # <p class=\"humidity\"><span><span class=\"hide\">습도</span></span><em>78%</em></p>\n",
+    "    humidity_tag = tag_right_today.find('p',{'class' : 'humidity'})\n",
+    "    humidity_tag_em = humidity_tag.find('em').text\n",
+    "    # <p class=\"rainfall\"><span><span class=\"hide\">강수량</span></span><em>4.0mm</em></p> \n",
+    "    rainfall_tag = tag_right_today.find('p',{'class' : 'rainfall'})\n",
+    "    rainfall_tag_em = rainfall_tag.find('em').text\n",
+    "    \n",
+    "    #<p class=\"wind\"><span><span class=\"hide\">풍향</span></span><em> 남서 4.5 m/s</em></p></div>\n",
+    "    wind_tag = tag_right_today.find('p',{'class' : 'wind'})\n",
+    "    wind_tag_em = wind_tag.find('em').text\n",
+    "    wind_tag_em_strip = wind_tag_em.strip()\n",
+    "    print(celsius)\n",
+    "    print(humidity_tag_em)\n",
+    "    print(rainfall_tag_em)\n",
+    "    print(wind_tag_em_strip)\n",
+    "    \n",
+    "    \n",
+    "    \n"
    ],
-   "id": "7338fa4f5bc9b0aa"
+   "id": "7338fa4f5bc9b0aa",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27℃\n",
+      "78%\n",
+      "4.0mm\n",
+      "남서 4.5 m/s\n"
+     ]
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "70976a1ef92f1430"
   }
  ],
  "metadata": {
