4교시,정적 크롤링, csv 파일에 출력해보기, 네이트 날씨 정보 확인2

--- a/pythonProject3/ch9_crawling/static_bs4/test4_csv.ipynb
+++ b/pythonProject3/ch9_crawling/static_bs4/test4_csv.ipynb
@@ -125,7 +125,7 @@
     "web_page = urllib.request.urlopen(new_weather_nate_url)\n",
     "bsObject = bs4.BeautifulSoup(web_page,\"html.parser\")\n",
     "\n",
-    "count = 1\n",
+    "count = 10\n",
     "\n",
     "while count > 0:\n",
     "    count -= 1\n",
@@ -144,11 +144,25 @@
     "    wind_tag = tag_right_today.find('p',{'class' : 'wind'})\n",
     "    wind_tag_em = wind_tag.find('em').text\n",
     "    wind_tag_em_strip = wind_tag_em.strip()\n",
-    "    print(celsius)\n",
-    "    print(humidity_tag_em)\n",
-    "    print(rainfall_tag_em)\n",
-    "    print(wind_tag_em_strip)\n",
+    "    # print(celsius)\n",
+    "    # print(humidity_tag_em)\n",
+    "    # print(rainfall_tag_em)\n",
+    "    # print(wind_tag_em_strip)\n",
+    "    # 날짜 및 시간 정보 가져오기. \n",
+    "    now = datetime.datetime.now()\n",
+    "    yymmdd = now.strftime(\"%Y-%m-%d\")\n",
+    "    hhmmss = now.strftime(\"%H:%M:%S\")\n",
     "    \n",
+    "    #csv 쓰기. \n",
+    "    #위의 날짜 및 시간의 정보를 csv 파일에 쓰기 작업. \n",
+    "    # 원하는 데이터 형식 -> 리스트 변환 \n",
+    "    weather_list = [yymmdd,hhmmss, celsius, humidity_tag_em, rainfall_tag_em,wind_tag_em_strip]\n",
+    "    with open(csvName, \"a\", newline=\"\", encoding=\"UTF-8\") as csvfile:\n",
+    "        csvwriter = csv.writer(csvfile)\n",
+    "        csvwriter.writerow(weather_list)\n",
+    "    \n",
+    "    #1초마다 , 진행하기. 10초씩 쉬기.     \n",
+    "    time.sleep(10)\n",
     "    \n",
     "    \n"
    ],
